--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
+.inline-block {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 120px;
+}
+
 .flexContainer {
     display: flex;
-    margin-left: 140px;
-    margin-right: 140px;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-top: 25px;
+    margin-bottom: 75px;
 }
 .flexContainer img {
     width: 760px;
 }
 .flexContainer h1 {
-  width: 50%;
   height: 48px;
   margin: 0px 233px 0px 50px;
   font-family: Georgia;
@@ -21,7 +28,6 @@
   color: #34424f;
 }
 .flexContainer p {
-    width: 100%;
     height: 138px;
     margin: 0px 132px 61px 50px;
     font-family: Verdana;
@@ -44,6 +50,7 @@ h1 {
     letter-spacing: normal;
     text-align: center;
     color: #34424f;
+    margin-top: 100px;
 }
 .researchGrid {
     display: grid;
@@ -79,7 +86,7 @@ h1 {
 }
 .researchGrid img {
     width: Auto;
-    margin: 10px;
+    margin: auto;
 }
 .ideationGrid {
     display: grid;
@@ -90,7 +97,7 @@ h1 {
 }
 .ideationGrid img {
     width: Auto;
-    margin: 100px;
+    margin: 10px;
 }
 .ideationGrid h2 {
     font-family: Georgia;
@@ -207,7 +214,7 @@ h1 {
     color: #34424f;
 }
 .futureGrid p{
-    width: 820px;
+    width: 100%;
     height: 138px;
     margin: 0px 132px 61px 0px;
     font-family: Verdana;
@@ -223,4 +230,125 @@ h1 {
 .futureGrid img {
     width: Auto;
     margin-left: 100px;
+}
+@media only screen and (max-width: 600px) {
+    header {
+        display: none;
+    }
+    .flexContainer {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 100px;
+        padding-bottom: 50px;
+    }
+    .flexContainer img {
+        width: 100%;
+    }
+    .flexContainer h1 {
+        text-align: center;
+        margin: 50px 0px 0px 0px;
+        width: 100%;
+    }
+    .flexContainer p {
+        width: 100%;
+        margin: 0px 0px 0px 0px;
+        margin-bottom: 100px;
+    }
+    h1 {
+        width: 100%;
+        margin-top: 50px;
+    }
+    .researchGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .researchGrid img {
+        width: 100%;
+    }
+    .researchGrid h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .researchGrid p {
+        width: 100%;
+    }
+    .ideationGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .ideationGrid img {
+        width: 75%;
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    .ideationGrid h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .ideationGrid p {
+        margin-bottom: 75px;
+    }
+    .prototypingGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .prototypingGrid img {
+        width: 75%;
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    .prototypingGrid h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .testingGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .testingGrid img {
+        width: 75%;
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    .testingGrid h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .testingGrid p {
+        margin-bottom: 75px;
+    }
+    .futureGrid {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .futureGrid img {
+        width: 75%;
+        margin-top: 25px;
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    .futureGrid h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .futureGrid p {
+        margin-bottom: 75px;
+    }
 }
